--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -32,7 +32,7 @@
         <link href="{{ asset('assets/pe-icon-7-stroke.css') }}" rel="stylesheet" />
         {#<link href="{{ asset('assets/css/gaia.css') }}" rel="stylesheet" />#}
 
-        {#<link href="{{ asset('assets/css/material-dashboard.css') }}" rel="stylesheet" />#}
+        <link href="{{ asset('assets/css/material-dashboard.css') }}" rel="stylesheet" />
         <link href="{{ asset('assets/css/menu.css') }}" rel="stylesheet" />
         <link href="{{ asset('assets/css/anim.css') }}" rel="stylesheet" />
         <link href="{{ asset('assets/css/owl.css') }}" rel="stylesheet" />
