--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,7 @@
         <link href="{{ asset('assets/css/menu.css') }}" rel="stylesheet" />
         <link href="{{ asset('assets/css/anim.css') }}" rel="stylesheet" />
         <link href="{{ asset('assets/css/owl.css') }}" rel="stylesheet" />
+
         {#<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">#}
 
     {% endblock %}
@@ -53,8 +54,9 @@
 
             <div class="owlMenu">
                 <ul>
-                    <li><a href={{ path('index') }}>L'agence</a></li>
-                    <li><a href={{ path('owlServicesDisplay') }}>Notre savoir-faire</a></li>
+                    <li><a href={{ path('index') }}>Accueil</a></li>
+                    <li><a href={{ path('owlAgencyDisplay') }}>Notre agence</a></li>
+                    <li><a href={{ path('owlServicesDisplay') }}>Nos services</a></li>
                     <li><a href={{ path('owlReferencesDisplay') }}>Nos références</a></li>
                     <li><a href={{ path('owlContactDisplay') }}>Nous contacter</a></li>
                     <li><a href={{ path('owlBlogDisplay') }}>Blog</a></li>
@@ -76,12 +78,12 @@
 
     <div class="headSection">
 
-        <div>
+        <div style="background-color:#ffbb00;">
             {#<div class="container">#}
                 <div class="content yellowBlock" style="text-align:left; margin-left:50px;">
 
-                    <div>
-                        <img alt="..." src="../assets/img/logoJaune.png" style="width:140px;height:140px"/>
+                    <div class="logoOwl">
+                        <a  href={{ path('index') }}><img alt="..." src="../assets/img/logoBlack.png" style="z-index:1;position:absolute;"/></a>
                     </div>
 
                 </div>
@@ -107,12 +109,12 @@
         <footer class="footer footer-big footer-color-black greyBlock" data-color="black">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-2 col-sm-3">
+                    <div class="col-md-4 col-sm-3">
+                        <li><a style="color:#bbb;" href={{ path('adminArticle') }}>Gestion des articles</a></li>
+                        <li><a style="color:#bbb;" href={{ path('adminProspect') }}>Suivi des prospects</a></li>
 
                     </div>
-                    <div class="col-md-3 col-md-offset-1 col-sm-3">
 
-                    </div>
                     <div class="col-md-3 col-sm-3">
                     </div>
                     <div class="col-md-2 col-md-offset-1 col-sm-3">
